--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/22090124-BerlianiRisqiDwiSaputri
 endorsed.classpath=
 excludes=
+file.reference.Downloads-mysql-connector-j-8.2.0=C:\\Users\\Berliani Risqi\\Downloads\\mysql-connector-j-8.2.0
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\linad\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Berliani Risqi\\Downloads\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar-1=lib\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.Downloads-mysql-connector-j-8.2.0}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
